Fix configuring mixed 1D/2D charts